# aoc-2022

./: pyproject.toml
src/days/01/: main.py
src/days/02/: main.py
src/days/03/: main.py
src/days/04/: main.py
src/days/05/: main.py
src/days/06/: main.py
src/days/07/: main.py
src/days/08/: main.py
src/days/09/: main.py
src/days/10/: main.py
src/days/11/: main.py
src/days/12/: example2.txt  main.py
src/days/13/: main.py
src/days/14/: main.py
src/days/15/: main.py
src/days/16/: main.py
src/days/17/: main.py
src/days/18/: main.py
src/days/19/: main.py
src/days/20/: main.py
src/days/21/: main.py
src/days/22/: main.py
src/days/23/: main.py
src/days/24/: main.py
src/days/25/: main.py
src/days/template/: main.py
